--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,9 @@ body {
 * {
   cursor: url('/public/icons/cursor.png'), auto !important;
 }
+
+.text-shadow {
+  text-shadow:
+    0 0 3px rgba(0,0,0,0.7),
+    0 0 5px rgba(0,0,0,0.5);
+}
